WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46101
WebKitTestRunner's wait-to-dump watchdog timer doesn't work on Windows
https://bugs.webkit.org/show_bug.cgi?id=46101
Summary
WebKitTestRunner's wait-to-dump watchdog timer doesn't work on Windows
Adam Roben (:aroben)
Reported
2010-09-20 10:07:30 PDT
WebKitTestRunner's wait-to-dump watchdog timer doesn't work on Windows
Attachments
Patch
(17.48 KB, patch)
2010-09-20 10:12 PDT
,
Adam Roben (:aroben)
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-09-20 10:12:20 PDT
Created
attachment 68103
[details]
Patch
WebKit Review Bot
Comment 2
2010-09-20 10:13:15 PDT
Attachment 68103
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebKitTools/WebKitTestRunner/InjectedBundle/win/LayoutTestControllerWin.cpp:26: Found header this file implements before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Adam Roben (:aroben)
Comment 3
2010-09-20 10:51:38 PDT
Committed
r67861
: <
http://trac.webkit.org/changeset/67861
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug