WebKitTools/WebKitTestRunner/InjectedBundle/LayoutTestController.h
@@ -97,14 +97,19 @@ public:
 
     bool waitToDump() const { return m_waitToDump; }
     void waitToDumpWatchdogTimerFired();
-    void invalidateWaitToDumpWatchdog();
+    void invalidateWaitToDumpWatchdogTimer();
 
     bool shouldAllowEditing() const { return m_shouldAllowEditing; }
 
     bool shouldCloseExtraWindowsAfterRunningTest() const { return m_shouldCloseExtraWindows; }
 
 private:
+    static const double waitToDumpWatchdogTimerInterval;
+
     LayoutTestController();
+
+    void platformInitialize();
+    void initializeWaitToDumpWatchdogTimerIfNeeded();
 
     WhatToDump m_whatToDump;
     bool m_shouldDumpAllFrameScrollPositions;
@@ -119,7 +124,11 @@ private:
     bool m_testRepaint;
     bool m_testRepaintSweepHorizontally;
 
-    RetainPtr<CFRunLoopTimerRef> m_waitToDumpWatchdog;
+#if PLATFORM(MAC)
+    RetainPtr<CFRunLoopTimerRef> m_waitToDumpWatchdogTimer;
+#elif PLATFORM(WIN)
+    UINT_PTR m_waitToDumpWatchdogTimer;
+#endif
 };
 
 } // namespace WTR
